--- a/app/src/main/res/layout/ucrop_layout.xml
+++ b/app/src/main/res/layout/ucrop_layout.xml
@@ -86,7 +86,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:textAppearanceMedium"
-                android:text="@string/dynamicButton" />
+                android:text="@string/dynamicButton"
+                tools:checked="true"/>
 
             <RadioButton
                 android:id="@+id/squareButton"
@@ -156,7 +157,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:hint="@string/width_image"/>
+                    android:hint="@string/width_image"
+                    android:inputType="number"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -170,7 +172,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:hint="@string/height_image"/>
+                    android:hint="@string/height_image"
+                    android:inputType="number"/>
 
             </LinearLayout>
 
